[gd_scene load_steps=10 format=3 uid="uid://bb4ohlgti4gwd"]

[ext_resource type="Script" path="res://scene/player.gd" id="1_vdvge"]

[sub_resource type="BoxMesh" id="BoxMesh_2ipyv"]

[sub_resource type="BoxShape3D" id="BoxShape3D_drywg"]

[sub_resource type="PlaneMesh" id="PlaneMesh_byf06"]
size = Vector2(50, 50)

[sub_resource type="BoxShape3D" id="BoxShape3D_4aqb7"]
size = Vector3(49, 0.5, 49)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2r26q"]
radius = 0.2
height = 1.6

[sub_resource type="CapsuleMesh" id="CapsuleMesh_j3jml"]
radius = 0.2
height = 1.6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xhhkd"]
disable_receive_shadows = true

[sub_resource type="CylinderMesh" id="CylinderMesh_12foe"]
material = SubResource("StandardMaterial3D_xhhkd")
top_radius = 0.02
bottom_radius = 0.02
height = 0.3
radial_segments = 12

[node name="playground" type="Node3D"]

[node name="box" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("BoxMesh_2ipyv")

[node name="collision" type="StaticBody3D" parent="box"]

[node name="shape" type="CollisionShape3D" parent="box/collision"]
shape = SubResource("BoxShape3D_drywg")

[node name="floor" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_byf06")

[node name="collision" type="StaticBody3D" parent="floor"]

[node name="shape" type="CollisionShape3D" parent="floor/collision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.251465, 0)
shape = SubResource("BoxShape3D_4aqb7")

[node name="player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 2)
script = ExtResource("1_vdvge")

[node name="shape" type="CollisionShape3D" parent="player"]
shape = SubResource("CapsuleShape3D_2r26q")

[node name="mesh" type="MeshInstance3D" parent="player"]
mesh = SubResource("CapsuleMesh_j3jml")
skeleton = NodePath("../..")

[node name="camera" type="Camera3D" parent="player/mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="light" type="OmniLight3D" parent="player/mesh/camera"]
transform = Transform3D(0.997165, -0.0146502, 0.0737997, 0.00922416, 0.997265, 0.0733353, -0.0746722, -0.0724467, 0.994573, 0.176222, -0.0573279, -0.385842)
light_size = 0.08
shadow_enabled = true
omni_range = 20.0

[node name="wand" type="MeshInstance3D" parent="player/mesh/camera/light"]
transform = Transform3D(1, -7.45058e-09, -1.11759e-08, 3.72529e-09, -0.163171, 0.986598, 1.49012e-08, -0.986598, -0.163171, 1.49012e-08, 0.0331647, 0.182554)
mesh = SubResource("CylinderMesh_12foe")

[node name="Control" type="Control" parent="player"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)

[node name="VBoxContainer" type="VBoxContainer" parent="player/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -51.0
offset_right = 87.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="player/Control/VBoxContainer"]
layout_mode = 2

[node name="mouse speed down" type="Button" parent="player/Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "<"

[node name="mouse speed" type="HSlider" parent="player/Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.001
max_value = 0.01
step = 0.001
value = 0.004
tick_count = 4
ticks_on_borders = true

[node name="mouse speed up" type="Button" parent="player/Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = ">"

[node name="HBoxContainer" type="HBoxContainer" parent="player/Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="player/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Mouse speed"

[node name="mouse speed" type="LineEdit" parent="player/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0.004"
alignment = 2

[connection signal="pressed" from="player/Control/VBoxContainer/HBoxContainer2/mouse speed down" to="player" method="_on_mouse_speed_down_pressed"]
[connection signal="value_changed" from="player/Control/VBoxContainer/HBoxContainer2/mouse speed" to="player" method="_on_mouse_speed_value_changed"]
[connection signal="pressed" from="player/Control/VBoxContainer/HBoxContainer2/mouse speed up" to="player" method="_on_mouse_speed_up_pressed"]
